💾 <argLine>-XX:+AllowRedefinitionToAddDeleteMethods</argLine>