@@ -65,7 +65,6 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
                 <version>${spring-boot-maven-plugin.version}</version>
                 <configuration>
-                    <jvmArguments>${jvmArguments} --enable-preview</jvmArguments>
                     <mainClass>org.jesperancinha.logistics.web.BridgeLogisticsApplication</mainClass>
                 </configuration>
                 <executions>
@@ -83,7 +82,6 @@
                 <configuration>
                     <target>${maven-compiler-plugin.target}</target>
                     <source>${maven-compiler-plugin.source}</source>
-                    <compilerArgs>--enable-preview</compilerArgs>
                 </configuration>
             </plugin>
             <plugin>
@@ -92,16 +90,13 @@
                 <version>${maven-surefire-plugin.version}</version>
                 <configuration>
                     <useSystemClassLoader>false</useSystemClassLoader>
-                    <argLine>${argLine} --enable-preview -XX:+AllowRedefinitionToAddDeleteMethods</argLine>
+                    <argLine>-XX:+AllowRedefinitionToAddDeleteMethods</argLine>
                 </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-failsafe-plugin</artifactId>
                 <version>${maven-failsafe-plugin.version}</version>
-                <configuration>
-                    <argLine>${argLine} --enable-preview</argLine>
-                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.jacoco</groupId>
